--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,5 @@
 name: ci-golang-workflow
-on: 
+on:
   pull_request:
     branches:
       - develop
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          go-version: 1.19
       - run: go test
       - run: go run math.go
       - name: Set up QEMU
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -30,6 +30,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: false
-          tags: wesleywillians/fc2.0-ci-go:latest
-
-    
+          tags: cccarv82/repo-exemplo-ci-docker-sonar:latest
