fix(ci.yaml): try one more time to fix CI issue

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,5 +28,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: true
+          push: false
           tags: cccarv82/repo-exemplo-ci-docker-sonar:latest
